<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contact Management</string>

    <!-- Navigation -->
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="back_to_contacts">Back to Contacts</string>
    <string name="back_to_contact_details">Back to Contact Details</string>

    <!-- Auth -->
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="register_confirm_password_hint">Confirm your password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="register_username_hint">Choose a username</string>
    <string name="register_full_name_hint">Enter your full name</string>
    <string name="register_password_hint">Create a password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Profile -->
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name_label">Full Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password_hint">Enter your new password</string>
    <string name="confirm_new_password_hint">Confirm your new password</string>
    <string name="update_password">Update Password</string>

    <!-- Contacts -->
    <string name="my_contacts">My Contacts</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="add_a_new_contact">Add a new contact to your list</string>
    <string name="contact_details">Contact Details</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="create_contact">Create Contact</string>

    <!-- Contact Fields -->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="email_address_hint">Enter email address</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="search_by_name_hint">Search by name</string>
    <string name="search_by_email_hint">Search by email</string>
    <string name="search_by_phone_hint">Search by phone</string>
    <string name="name">Name</string>
    <string name="search">Search</string>

    <!-- Address -->
    <string name="addresses">Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="home_address">Home Address</string>
    <string name="street_label">Street</string>
    <string name="city_label">City</string>
    <string name="province_state_label">Province/State</string>
    <string name="country_label">Country</string>
    <string name="postal_code_label">Postal Code</string>
    <string name="street_address_hint">Enter street address</string>
    <string name="city_hint">Enter city</string>
    <string name="province_or_state_hint">Enter province or state</string>
    <string name="country_hint">Enter country</string>
    <string name="postal_code_hint">Enter postal code</string>

    <!-- Actions -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="save">Save</string>

    <!-- Dialogs -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_contact_confirmation">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="success">Success</string>
    <string name="contact_updated_successfully">Contact updated successfully</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait</string>
    <string name="ups">Ups</string>
    <string name="loading">Loading</string>

    <!--  Pagination  -->
    <string name="page_info">Page 1 of 2</string>

    <!-- Footer -->
    <string name="copyright">© 2025 Contact Management. All rights reserved.</string>
    <string name="page_number">1</string>
</resources>