<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation_high">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_xlarge">

        <!-- Icon -->
        <View
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_circle_blue"
            android:backgroundTint="@color/gray_300" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="-70dp"
            android:gravity="center"
            android:text="?"
            android:textColor="@color/gray_600"
            android:textSize="48sp"
            android:textStyle="bold" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif-medium"
            android:text="@string/are_you_sure"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <!-- Message -->
        <TextView
            android:id="@+id/tvDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/delete_contact_confirmation"
            android:textAlignment="center"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_size_medium" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogPositive"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/bg_button_delete"
                android:fontFamily="sans-serif-medium"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogNegative"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/bg_button_primary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>