<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/elevation_high">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_xlarge">

        <!-- Icon -->
        <View
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_circle_blue"
            android:backgroundTint="#D1FAE5" />

        <ImageView
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:layout_marginTop="-64dp"
            android:contentDescription="@string/success"
            android:src="@drawable/ic_check"
            app:tint="#10B981" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif-medium"
            android:text="@string/success"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <!-- Message -->
        <TextView
            android:id="@+id/tvSuccessMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/contact_updated_successfully"
            android:textAlignment="center"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_size_medium" />

        <!-- Button -->
        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</androidx.cardview.widget.CardView>